--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "dayjs": "^1.10.4",
     "formik": "^2.2.6",
     "jwt-decode": "^3.1.2",
     "postcss": "^8.2.4",
